--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,9 @@ iodine - https://code.kryo.se/iodine
 
 CHANGES:
 
-master:
+# TODO: Update Codename
+# TODO: Update release date
+2023-04-16: 0.8.0 "Codename"
 	- Mac OS X: Support native utun VPN devices. Patch by
 		Peter Sagerson, ported from OpenVPN by Catalin Patulea.
 	- Fix compilation failure on kFreeBSD and Hurd, by Gregor Herrmann
